Second table with functions added
